@@ -1,3 +1,14 @@
+2011-11-05  Darin Adler  <darin@apple.com>
+
+        Fix a small leak in Mac version of LayoutTestController
+        https://bugs.webkit.org/show_bug.cgi?id=71615
+
+        Reviewed by Mark Rowe.
+
+        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
+        (LayoutTestController::applicationCacheDiskUsageForOrigin): Release the origin.
+        (LayoutTestController::localStorageDiskUsageForOrigin): Ditto.
+
 2011-11-04  Eric Seidel  <eric@webkit.org>
 
         Upgrade to the latest Mechanize
